--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="info">
                     <h3>Mohamed Tamer </h3>
-                    <p>Don't touch his hair or he will touch your kids/p>
+                    <p>Don't touch his hair or he will touch your kids</p>
                 </div>
             </div>
             <div class="card">
