--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="content">
             <div class="card">
                 <div class="project-image">
-                    <img src="387482986_887727759440619_4164678293867887162_n.jpg" alt="Ahmed hassan">
+                    <img src="3654db15-6fe6-48bf-9fbc-f100413e82a4.jfif" alt="Ahmed hassan">
                 </div>
                 <div class="info">
                     <h3>Ahmed Hassan</h3>
